force-app/main/default/objects/Delimitadores__c/Delimitadores__c.object-meta.xml
<CustomObject>
    <label>Delimitadores</label>
    <nameField>
        <label>Delimitadores Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delimitadores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>