force-app/main/default/objects/Delimitadores__c/fields/EndDateBilling__c.field-meta.xml
<CustomField>
    <fullName>EndDateBilling__c</fullName>
    <label>Data Fim Faturamento</label>
    <type>Date</type>
</CustomField>