force-app/main/default/objects/Delimitadores__c/fields/EndDateOV__c.field-meta.xml
<CustomField>
    <fullName>EndDateOV__c</fullName>
    <label>Data Fim OV</label>
    <type>Date</type>
</CustomField>