force-app/main/default/objects/Delimitadores__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Campo para controle de identificação do registro.</description>
    <externalId>true</externalId>
    <label>Código</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>