force-app/main/default/objects/Delimitadores__c/fields/FinancialBaseDate__c.field-meta.xml
<CustomField>
    <fullName>FinancialBaseDate__c</fullName>
    <label>Data Base Financeiro</label>
    <type>Date</type>
</CustomField>