force-app/main/default/objects/Delimitadores__c/fields/LimitDateAfterPayment__c.field-meta.xml
<CustomField>
    <fullName>LimitDateAfterPayment__c</fullName>
    <label>Data Limite Para Pagamento</label>
    <type>Date</type>
</CustomField>