force-app/main/default/objects/Delimitadores__c/fields/Safra__c.field-meta.xml
<CustomField>
    <fullName>Safra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Safra__c</referenceTo>
    <relationshipLabel>Delimitadores</relationshipLabel>
    <relationshipName>Delimitadores</relationshipName>
    <type>Lookup</type>
</CustomField>