force-app/main/default/objects/Delimitadores__c/fields/SalesCondition__c.field-meta.xml
<CustomField>
    <fullName>SalesCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de Preços</label>
    <referenceTo>SalesCondition__c</referenceTo>
    <relationshipLabel>Delimitadores</relationshipLabel>
    <relationshipName>Delimitadores</relationshipName>
    <type>Lookup</type>
</CustomField>