force-app/main/default/objects/Delimitadores__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organização de Venda</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipLabel>Delimitadores</relationshipLabel>
    <relationshipName>Delimitadores</relationshipName>
    <type>Lookup</type>
</CustomField>