force-app/main/default/objects/Delimitadores__c/fields/StartDateBilling__c.field-meta.xml
<CustomField>
    <fullName>StartDateBilling__c</fullName>
    <label>Data Inicio Faturamento</label>
    <type>Date</type>
</CustomField>