force-app/main/default/objects/Delimitadores__c/fields/StartDateOV__c.field-meta.xml
<CustomField>
    <fullName>StartDateOV__c</fullName>
    <label>Data Início OV</label>
    <type>Date</type>
</CustomField>